Fixed overflow issue

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow-x: hidden;
     white-space: nowrap;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
